--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "firebase": "^10.4.0",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
     "json-server": "^0.17.3",
     "package-name": "^0.1.0",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
